2006-11-09  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/cipher.c (HAVE_LIBGCRYPT:_cipher_update):
	  Tweaked assertions.  Updated documentation.
	* src/munged/cipher.c (HAVE_LIBGCRYPT:_cipher_final):
	  Tweaked assertions.

	* src/munged/cipher.c (cipher_update, cipher_final):
	  Added check for valid dstlen.

	* src/munged/mac.c (mac_init): Changed so assert assignments are only
	  made if _mac_init() succeeds.
	* src/munged/md.c (md_init): Changed so assert assignments are only
	  made if _md_init() succeeds.

	* src/munged/random.h: Updated documentation for random_init().
	* src/munged/random.c (HAVE_LIBGCRYPT:_random_read_seed):
	  Fixed inner loop to process number of bytes read and exit on EOF.
	* src/munged/random.c (HAVE_LIBGCRYPT:_random_write_seed):
	  Tweaked var names to match HAVE_LIBGCRYPT:_random_read_seed().

	* src/munged/mac.h: Added len to struct mac_ctx.
	* src/munged/mac.c (mac_final): Added check for valid dstlen.
	* src/munged/mac.c (_mac_init): Set struct mac_ctx len var.
	* src/munged/mac.c (_mac_final): Added dstlen check to ensure mac will
	  not overflow dst buffer.
	* src/munged/mac.c (HAVE_LIBGCRYPT:_mac_block): Memset ctx when done.
	* src/munged/mac.c (HAVE_OPENSSL:_mac_block): Added dstlen check to
	  ensure mac will not overflow dst buffer.

2006-11-08  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/md.h: Added len to struct md_ctx.
	* src/munged/md.c (md_final): Added check for valid dstlen.
	* src/munged/md.c (md_copy): Copied struct md_ctx len var.
	* src/munged/md.c (_md_init): Set struct md_ctx len var.
	* src/munged/md.c (_md_final): Added dstlen check to ensure md will not
	  overflow dst buffer.

	* src/munged/md.c (md_cleanup): Removed unnecessary var initialization.

	* src/munged/crypto.c (crypto_init): Tweaked err msg verbage.

2006-11-07  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/enc.c (enc_mac): Reverted assertion after mac_final().

2006-11-02  Chris Dunlap  <cdunlap@llnl.gov>
