@@ -46,7 +46,7 @@
 
 typedef struct {
     gcry_md_hd_t        ctx;
-    int                 len;
+    int                 diglen;
 #ifndef NDEBUG
     int                 magic;
     int                 finalized;
@@ -62,7 +62,7 @@ typedef struct {
 
 typedef struct {
     EVP_MD_CTX          ctx;
-    int                 len;
+    int                 diglen;
 #ifndef NDEBUG
     int                 magic;
     int                 finalized;
